--- a/app/bin/main/app/GameWindow.fxml
+++ b/app/bin/main/app/GameWindow.fxml
@@ -2,14 +2,33 @@
 
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<VBox fx:controller="app.MainWindow" xmlns:fx="http://javafx.com/fxml"  stylesheets="@MainWindow.css"
-    spacing="10" prefHeight="400" prefWidth="250">
+<HBox fx:controller="app.GameWindow" xmlns:fx="http://javafx.com/fxml"  stylesheets="@MainWindow.css"
+    spacing="20" prefHeight="400" prefWidth="600" alignment="CENTER_LEFT">
 
-    <TextField fx:id="name" />
-    <Label fx:id="calcy" />
-    <Button onAction="#onCalculateClicked" text="Calculate"  />
-    <Label fx:id="error" />
-    <Button fx:id="create" onAction="#onCreateClicked" text="Create"  />
+    <VBox alignment="TOP_CENTER" spacing="40" prefWidth="160">
+    <VBox alignment="CENTER" spacing="10">
+    <Label text="HOLD" style="-fx-font-size: 18px; -fx-font-family: 'Arial';" prefWidth="90" />
+    <Pane prefHeight="100" prefWidth="100" style="-fx-border-color: black;"/>
+    </VBox>
+    <VBox alignment="CENTER" spacing="10">
+    <Label text="SCORE" style="-fx-font-size: 18px; -fx-font-family: 'Arial';" prefWidth="90" />
+    <Pane prefHeight="100" prefWidth="100" style="-fx-border-color: black;"/>
+    </VBox>
+    </VBox>
 
-</VBox>
+    <Pane prefHeight="400" prefWidth="300" style="-fx-border-color: black; -fx-border-background-color: grey;" />
+
+    <VBox alignment="TOP_CENTER" spacing="40" prefWidth="160">
+    <VBox alignment="CENTER" spacing="10">
+    <Label text="NEXT" style="-fx-font-size: 18px; -fx-font-family: 'Arial';" prefWidth="90" />
+    <Pane prefHeight="180" prefWidth="100" style="-fx-border-color: black;"/>
+    </VBox>
+    <Button text="⏸" prefWidth="60" prefHeight="60" style="-fx-font-size: 20px"/>
+    </VBox>
+
+
+
+
+</HBox>
