--- a/app/bin/main/app/MainWindow.fxml
+++ b/app/bin/main/app/MainWindow.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.text.*?>
 
 
-<VBox fx:controller="app.MainWindow" xmlns:fx="http://javafx.com/fxml" stylesheets="@MainWindow.css"
+<VBox fx:id="vbox" fx:controller="app.MainWindow" xmlns:fx="http://javafx.com/fxml" stylesheets="@MainWindow.css"
     spacing="20" prefHeight="400" prefWidth="600" alignment="CENTER">
 
     <Text text="Cuatros" style="-fx-font-size: 48px; -fx-font-family: 'Arial';" />
