--- a/app/bin/main/app/MainWindow.css
+++ b/app/bin/main/app/MainWindow.css
@@ -1,5 +1,9 @@
 .root {
     -fx-padding: 10; /* Add a small padding around the window */
     padding: 10;     /* duplicated for compatibility */
-    -fx-background-color: BLACK;
+    -fx-background-color: #080705;
+}
+
+.Button {
+    -fx-background-color: yellow;
 }
