--- a/app/bin/main/app/MainWindow.fxml
+++ b/app/bin/main/app/MainWindow.fxml
@@ -17,7 +17,7 @@
 
     <VBox alignment="CENTER_LEFT" spacing="10">
     <Button styleClass="Button" text="Help" prefWidth="100"/>
-    <Button styleClass="Button" text="About" prefWidth="100"/>
+    <Button styleClass="Button" onAction="#onAbout" text="About" prefWidth="100"/>
     </VBox>
 
 </VBox>
