--- a/app/src/main/resources/app/MainWindow.fxml
+++ b/app/src/main/resources/app/MainWindow.fxml
@@ -20,5 +20,9 @@
     <Button styleClass="Button" onAction="#onAbout" text="About" prefWidth="100"/>
     </VBox>
 
+    <HBox alignment="BOTTOM_RIGHT" spacing="10">
+    
+    </HBox>
+
 </VBox>
     
