Added animation to block

--- a/app/src/main/resources/app/GameWindow.css
+++ b/app/src/main/resources/app/GameWindow.css
@@ -21,7 +21,7 @@
 .score:hover{
     -fx-background-color: grey;
 }
-.next{
+.next{ /*Next*/
     -fx-background-color: black;
     -fx-background-radius: 20;
 }
