--- a/app/src/main/resources/app/TitleScreen.fxml
+++ b/app/src/main/resources/app/TitleScreen.fxml
@@ -6,8 +6,12 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.media.MediaView?>
 
-<VBox fx:id="titleScreenRoot" fx:controller="app.TitleScreen" xmlns:fx="http://javafx.com/fxml" >
+<StackPane fx:id="titleScreenRoot" fx:controller="app.TitleScreen" xmlns:fx="http://javafx.com/fxml" stylesheets="@TitleScreen.css" >
 <MediaView fx:id="mediaView" fitWidth="800" fitHeight="600" preserveRatio="false"/>
+
+<VBox spacing="10" alignment="BOTTOM_RIGHT" style="-fx-padding: 50 10 10 10"> <!--70 moves up-->
+<Button text="SKIP" styleClass="skipbutton" onAction="#onSkipClicked" prefWidth="100" prefHeight="40" />
 </VBox>
+</StackPane>
 
 
