--- a/app/src/main/resources/app/MainWindow.fxml
+++ b/app/src/main/resources/app/MainWindow.fxml
@@ -9,19 +9,22 @@
     spacing="20" prefHeight="400" prefWidth="600" alignment="CENTER">
 
     <VBox alignment="CENTER" spacing="10">
-    <Button styleClass="Button" text="PLAY ▶" prefWidth="200" onAction="#onPlayClicked"/>
-    <Button styleClass="Button" text="Leaderboard" prefWidth="200"/>
+    <Button styleClass="Button" text="Play ▶" prefWidth="200" onAction="#onPlayClicked"/>
+    <Button styleClass="Button" text="Tutorial 🎓" prefWidth="200" onAction="#onTutorialClicked"/>
+    <Button styleClass="Button" text="Leaderboard 🏆" prefWidth="200" onAction="#onLeaderBoardClicked"/>
     </VBox>
 
     <Region prefHeight="50"/>
 
-    <VBox alignment="CENTER_LEFT" spacing="10" >
-    <Button styleClass="Button" text="Help" prefWidth="100"/>
-    <Button styleClass="Button" onAction="#onAboutClicked" text="About" prefWidth="100"/>
+    <HBox alignment="BOTTOM_CENTER" spacing="10" prefWidth="80">
+    <VBox alignment="BOTTOM_LEFT" spacing="10" >
+    <Button styleClass="Button" text="Help ❔" prefWidth="100" onAction="#onHelpClicked"/>
+    <Button styleClass="Button" onAction="#onAboutClicked" text="About 📖" prefWidth="120"/>
     </VBox>
-
-    <HBox alignment="BOTTOM_RIGHT" spacing="10">
-    
+    <Region prefWidth="550"/> 
+    <VBox alignment="BOTTOM_RIGHT" spacing="10" >
+    <Button styleClass="Button" text="Settings ⚙️" prefWidth="125" onAction="#onSettingsClicked"/>
+    </VBox>
     </HBox>
 
 </VBox>
