Added mute/unute updated CSS

--- a/app/src/main/resources/app/About.css
+++ b/app/src/main/resources/app/About.css
@@ -20,5 +20,6 @@
     /* -fx-background-color: linear-gradient(to right,
     cyan, blue, orange, yellow, greenyellow, indigo, red); */
 
-    -fx-text-fill: #fad819;
+    -fx-text-fill: black;;
+    -fx-background-color: cyan;
 }
