--- a/app/src/main/resources/app/TitleScreen.fxml
+++ b/app/src/main/resources/app/TitleScreen.fxml
@@ -9,6 +9,10 @@
 <StackPane fx:id="titleScreenRoot" fx:controller="app.TitleScreen" xmlns:fx="http://javafx.com/fxml" stylesheets="@TitleScreen.css" >
 <MediaView fx:id="mediaView" fitWidth="800" fitHeight="600" preserveRatio="false"/>
 
+<VBox alignment="CENTER" spacing="5">
+<Text fx:id="jdText" text="JD" visible="false" style="-fx-text-fill: white; -fx-font-size: 47px; -fx-font-weight: bold;"/>
+</VBox>
+
 <VBox spacing="10" alignment="BOTTOM_RIGHT" style="-fx-padding: 50 10 10 10"> <!--70 moves up-->
 <Button text="SKIP" styleClass="skipbutton" onAction="#onSkipClicked" prefWidth="100" prefHeight="40" />
 </VBox>
