--- a/app/src/main/resources/app/MainWindow.css
+++ b/app/src/main/resources/app/MainWindow.css
@@ -42,11 +42,12 @@
 }
 
 #vbox{
-    -fx-background-image: url("background.png");
+    -fx-padding: 10;
+    /* -fx-background-image: url("background.png");
     -fx-background-repeat: no-repeat;
     -fx-background-position: center center;
     -fx-background-size: cover;
-    -fx-padding: 10;
+    -fx-padding: 10; */
 
 }
 
