--- a/app/src/main/resources/app/GameWindow.fxml
+++ b/app/src/main/resources/app/GameWindow.fxml
@@ -3,10 +3,15 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
+<?import javafx.scene.media.MediaView?>
 
 
-<HBox fx:id="hbox" fx:controller="app.GameWindow" xmlns:fx="http://javafx.com/fxml"  stylesheets="@GameWindow.css"
-    spacing="40" prefHeight="600" prefWidth="800" alignment="CENTER">
+<StackPane fx:id="gameWindowRoot" fx:controller="app.GameWindow" xmlns:fx="http://javafx.com/fxml" stylesheets="@GameWindow.css">
+
+<MediaView fx:id="mediaView" fitWidth="800" fitHeight="600" preserveRatio="false"/>
+
+
+<HBox fx:id="hbox" spacing="40" prefHeight="600" prefWidth="800" alignment="CENTER">
 
     <VBox alignment="TOP_CENTER" spacing="60" prefWidth="200">
         <VBox alignment="CENTER" spacing="10">
@@ -32,3 +37,4 @@
     </VBox>
     </VBox>
 </HBox>
+</StackPane>
